# Cheminformatics_pubData_rapalogs

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: rapamycin_ADMET_Absorption.ipynb  rapamycin_ADMET_Distribution.ipynb  rapamycin_ADMET_Excretion.ipynb  rapamycin_ADMET_Metabolism.ipynb  rapamycin_ADMET_Toxicity.ipynb  rapamycin_qsar.ipynb
reports/: README.md  step1_descriptors.txt  step1_fingerprint.txt  step2_curation_summary.txt  step2_model_metrics.txt  step4_hypothetical_predictions.csv  step4_hypothetical_predictions.txt  step4_recapitulation.csv  step4_recapitulation.txt
