[project]
name = "cheminformatics-pubdata"
version = "0.1.0"
description = "Cheminformatics QSAR deliverables (RDKit + ChEMBL). First deliverable: rapamycin / rapalog QSAR."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    # rdkit dropped macOS x86_64 wheels after 2025.9.3; pin exactly for Intel-Mac.
    "rdkit==2025.9.3",
    "scikit-learn>=1.4",
    "chembl-webresource-client>=0.10.9",
    "pyarrow>=16.0",
    "requests>=2.31",
    "jupyterlab>=4.2",
    "nbformat>=5.10",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
